# DataEng_WebScrap

./: .gitignore  pyproject.toml
final_app/: pipeline.py
final_app/extract/: config.yaml
final_app/load/: article.py  db_main.py  newspaper.db
final_app/transform/: newspaper_recipe.py
loadData_into_SQLite/: article.py  newspaper.db
myplatzidata/: Platzi_Data.ipynb
tests/: test_myplatzidata.py
web_scrapper/: config.yaml  eluniversal_2020_04_07_articles.csv  main.py  news_page_objects.py  newspaper_recipe.py
