[tool.poetry]
name = "myPlatziData"
version = "0.1.0"
description = ""
authors = ["Anderson RS <ander.irs@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.1"
pandas = "^1.0.1"
matplotlib = "^3.2.0"
jupyterlab = "^2.0.1"
jupytext = "^1.3.5"
requests = "^2.23.0"
jupytex = "^0.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
