[tool.poetry]
name = "myPlatziData"
version = "0.1.0"
description = ""
authors = ["Anderson RS <ander.irs@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18.1"
pandas = "^1.0.1"
matplotlib = "^3.2.0"
jupyterlab = "^2.0.1"
requests = "^2.23.0"
jupytex = "^0.0.3"
pyyaml = "^5.3"
beautifulsoup4 = "^4.8.2"
argparse = "^1.4.0"
nltk = "^3.4.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
